--- a/app/templates/artifacts.html
+++ b/app/templates/artifacts.html
@@ -24,38 +24,38 @@
             </tr>
             <tr>
                 <td class="WaterRare align-middle"><img src="{{ url_for('static', filename='water.png') }}" width="40" alt="Water"></td>
-                <td class="WaterRare align-middle text-center">{{ user.artDisplay(user.artAtk("Water")) }}%</td>
-                <td class="WaterRare align-middle text-center">{{ user.artAps() }}%</td>
-                <td class="WaterRare align-middle text-center">{{ user.artDisplay(user.artCrit()) }}%</td>
-                <td class="WaterRare align-middle text-center">{{ user.artDisplay(user.artCritDmg("Water")) }}%</td>
+                <td class="WaterRare align-middle text-center">{{ user.artDisplay(user.art_atk("Water")) }}%</td>
+                <td class="WaterRare align-middle text-center">{{ user.art_aps() }}%</td>
+                <td class="WaterRare align-middle text-center">{{ user.artDisplay(user.art_crit()) }}%</td>
+                <td class="WaterRare align-middle text-center">{{ user.artDisplay(user.art_crit_dmg("Water")) }}%</td>
             </tr>
             <tr>
                 <td class="FireRare align-middle"><img src="{{ url_for('static', filename='fire.png') }}" width="40" alt="Fire"></td>
-                <td class="FireRare align-middle text-center">{{ user.artDisplay(user.artAtk("Fire")) }}%</td>
-                <td class="FireRare align-middle text-center">{{ user.artAps() }}%</td>
-                <td class="FireRare align-middle text-center">{{ user.artDisplay(user.artCrit()) }}%</td>
-                <td class="FireRare align-middle text-center">{{ user.artDisplay(user.artCritDmg("Fire")) }}%</td>
+                <td class="FireRare align-middle text-center">{{ user.artDisplay(user.art_atk("Fire")) }}%</td>
+                <td class="FireRare align-middle text-center">{{ user.art_aps() }}%</td>
+                <td class="FireRare align-middle text-center">{{ user.artDisplay(user.art_crit()) }}%</td>
+                <td class="FireRare align-middle text-center">{{ user.artDisplay(user.art_crit_dmg("Fire")) }}%</td>
             </tr>
             <tr>
                 <td class="EarthRare align-middle"><img src="{{ url_for('static', filename='earth.png') }}" width="40" alt="Earth"></td>
-                <td class="EarthRare align-middle text-center">{{ user.artDisplay(user.artAtk("Earth")) }}%</td>
-                <td class="EarthRare align-middle text-center">{{ user.artAps() }}%</td>
-                <td class="EarthRare align-middle text-center">{{ user.artDisplay(user.artCrit()) }}%</td>
-                <td class="EarthRare align-middle text-center">{{ user.artDisplay(user.artCritDmg("Earth")) }}%</td>
+                <td class="EarthRare align-middle text-center">{{ user.artDisplay(user.art_atk("Earth")) }}%</td>
+                <td class="EarthRare align-middle text-center">{{ user.art_aps() }}%</td>
+                <td class="EarthRare align-middle text-center">{{ user.artDisplay(user.art_crit()) }}%</td>
+                <td class="EarthRare align-middle text-center">{{ user.artDisplay(user.art_crit_dmg("Earth")) }}%</td>
             </tr>
             <tr>
                 <td class="LightRare align-middle"><img src="{{ url_for('static', filename='light.png') }}" width="40" alt="Light"></td>
-                <td class="LightRare align-middle text-center">{{ user.artDisplay(user.artAtk("Light")) }}%</td>
-                <td class="LightRare align-middle text-center">{{ user.artAps() }}%</td>
-                <td class="LightRare align-middle text-center">{{ user.artDisplay(user.artCrit()) }}%</td>
-                <td class="LightRare align-middle text-center">{{ user.artDisplay(user.artCritDmg("Light")) }}%</td>
+                <td class="LightRare align-middle text-center">{{ user.artDisplay(user.art_atk("Light")) }}%</td>
+                <td class="LightRare align-middle text-center">{{ user.art_aps() }}%</td>
+                <td class="LightRare align-middle text-center">{{ user.artDisplay(user.art_crit()) }}%</td>
+                <td class="LightRare align-middle text-center">{{ user.artDisplay(user.art_crit_dmg("Light")) }}%</td>
             </tr>
             <tr>
                 <td class="DarkRare align-middle"><img src="{{ url_for('static', filename='dark.png') }}" width="40" alt="Dark"></td>
-                <td class="DarkRare align-middle text-center">{{ user.artDisplay(user.artAtk("Dark")) }}%</td>
-                <td class="DarkRare align-middle text-center">{{ user.artAps() }}%</td>
-                <td class="DarkRare align-middle text-center">{{ user.artDisplay(user.artCrit()) }}%</td>
-                <td class="DarkRare align-middle text-center">{{ user.artDisplay(user.artCritDmg("Dark")) }}%</td>
+                <td class="DarkRare align-middle text-center">{{ user.artDisplay(user.art_atk("Dark")) }}%</td>
+                <td class="DarkRare align-middle text-center">{{ user.art_aps() }}%</td>
+                <td class="DarkRare align-middle text-center">{{ user.artDisplay(user.art_crit()) }}%</td>
+                <td class="DarkRare align-middle text-center">{{ user.artDisplay(user.art_crit_dmg("Dark")) }}%</td>
             </tr>
             </thead>
         </table>
