--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -16,13 +16,13 @@
     <div class="col-lg-3">
         <table class="table table-borderless table-sm">
             <tr>
-                <td width="150">Member since:</td><td>{{ user.registeredProper(user.registered) }}</td>
+                <td width="150">Member since:</td><td>{{ user.registered_proper(user.registered) }}</td>
             </tr>
             <tr>
-                <td width="150">Total Power:</td><td>{{ user.totalPower() }}</td>
+                <td width="150">Total Power:</td><td>{{ user.total_power() }}</td>
             </tr>
             <tr>
-                <td width="150">Power per day:</td><td>{{ user.powerPerDay() }}</td>
+                <td width="150">Power per day:</td><td>{{ user.power_per_day() }}</td>
             </tr>
 
 
