--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -37,7 +37,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in krakenDict.items() %}
+            {% for key, value in kraken_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -100,7 +100,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in deepseakingDict.items() %}
+            {% for key, value in deepseaking_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -126,7 +126,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in frostwingDict.items() %}
+            {% for key, value in frostwing_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -156,7 +156,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in valkenbotDict.items() %}
+            {% for key, value in valkenbot_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -182,7 +182,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in firegorgeDict.items() %}
+            {% for key, value in firegorge_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -208,7 +208,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in madkingDict.items() %}
+            {% for key, value in madking_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -237,7 +237,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in sandclawDict.items() %}
+            {% for key, value in sandclaw_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -263,7 +263,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in voodootankDict.items() %}
+            {% for key, value in voodootank_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -289,7 +289,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in undeadsamuraiDict.items() %}
+            {% for key, value in undeadsamurai_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -318,7 +318,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in odinDict.items() %}
+            {% for key, value in odin_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -344,7 +344,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in lightmechDict.items() %}
+            {% for key, value in lightmech_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -370,7 +370,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in astrolabDict.items() %}
+            {% for key, value in astrolab_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -399,7 +399,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in beetleDict.items() %}
+            {% for key, value in beetle_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -425,7 +425,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in hauntingheadDict.items() %}
+            {% for key, value in hauntinghead_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
@@ -451,7 +451,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in gunlordDict.items() %}
+            {% for key, value in gunlord_dict.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
