--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -4,58 +4,14 @@
 
  <div class="row pt-3">
     <div class="col-lg-12">
-      <h1 class="display-4">Boss Teams</h1>
+      <h1 class="display-4">Test</h1>
       <hr>
       <p class="instructions">These are your optimal damage teams for each boss in the Slay Boss Event.</p><hr>
-        {{ boss }}
+        {{ filter_team }}
       <hr>
     </div>
  </div>
 
- <div class="row pt-3">
-    <div class="col-lg-6">
-      <h1 class="display-4">Testing</h1>
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th colspan="3" class="text-center">Kraken</th>
-            </tr>
-            <tr>
-                <th>Hero</th>
-                <th colspan="2">DPS</th>
-            </tr>
-            </thead>
-            {{ filterTeam }}
-        </table>
-    </div>
-
-
-<div class="col-lg-6">
-
-
-
-
-
-
-    <div class="col-lg-6">
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th colspan="3" class="text-center">Kraken</th>
-            </tr>
-            <tr>
-                <th>Hero</th>
-                <th colspan="2">DPS</th>
-            </tr>
-            </thead>
-            {% for key, value in testTeam.items() %}
-            <tr>
-                <td>{{ key }}</td><td>{{ value }}</td><td></td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
- </div>
 
 
 
