--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -89,7 +89,7 @@
                 <dl>
                         <dt class="text-secondary"><code class="text-secondary">In development:</code></dt>
                     <dd><code class="text-secondary">- Feature to manually select heroes to calculate boss damage.</code></dd>
-                        <dd><code class="text-secondary">- Improve speed of bossTeam algorithm.</code></dd>
+                    <dd><code class="text-secondary"><strike>- Improve speed of bossTeam algorithm.</strike> | <strong>Lightning speed!</strong></code></dd>
                         <dd><code class="text-secondary">- Calculate and present hero investments.</code></dd>
                 </dl></td>
             </tr>
