--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -79,6 +79,13 @@
           {% endif %}
 
         <li class="nav-item">
+            {% if guides_active == 1 %}
+          <a class="nav-link active" href="{{ url_for('resources') }}">Resources</a>
+            {% else %}
+            <a class="nav-link" href="{{ url_for('resources') }}">Resources</a>
+            {% endif %}
+        </li>
+        <li class="nav-item">
             {% if aboutactive == 1 %}
           <a class="nav-link active" href="{{ url_for('about') }}">About</a>
             {% else %}
