--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -12,7 +12,7 @@
 <div class="row pt-3">
     <div class="col-lg-4"></div>
     <div class="col-lg-4">
-
+        <p class="text-center font-italic">Usernames and passwords are case sensitive</p>
         <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <div class="form-group">
