Export features (raid info PNG, collection xlsx)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -89,7 +89,7 @@
                 <dl>
                         <dt class="text-secondary"><code class="text-secondary">In development:</code></dt>
                     <dd><code class="text-secondary"><strike>- Resources/guides section, accessible without logging in.</strike></code></dd>
-                    <dd><code class="text-secondary">- Ability to export your hero collection and stats.</code></dd>
+                    <dd><code class="text-secondary"><strike>- Ability to export your hero collection and stats.</strike></code></dd>
                     <dd><code class="text-secondary"><strike>- Improve speed of bossTeam algorithm.</strike> | <strong>Lightning speed!</strong></code></dd>
                         <dd><code class="text-secondary">- Calculate and present hero investments.</code></dd>
                 </dl></td>
