--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -28,19 +28,18 @@
 
         </table>
     </div>
-    <!--
-    <div class="col-lg-3">
+
+    <div class="col-lg-8">
         <table class="table table-borderless table-sm">
             <tr>
-                <td width="150">Overall progress:</td><td> POSSIBLY ADD </td>
+              <td><a href="{{ url_for('export_raid', username=current_user.username) }}">Export Raid information</a></td>
             </tr>
-            <tr>
-                <td width="150">Favoured element:</td><td> POSSIBLY ADD /td>
+          <tr>
+              <td><a href="{{ url_for('export_excel', username=current_user.username) }}">Export Hero Collection (Excel)</a></td>
             </tr>
-
         </table>
     </div>
-    -->
+
 </div>
 <div class="row">
     <div class="col-lg-12">
