Further security updates on collection, progress, artifacts, teams

--- a/app/templates/artifacts.html
+++ b/app/templates/artifacts.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if user == current_user %}
 
 <div class="row pt-3">
     <div class="col-lg-12">
@@ -150,6 +151,17 @@
     </div>
 </div>
 </form>
-<br><br>
+<br>
+{% else %}
+<div class="row pt-3">
+    <div class="col-lg-12">
+      <h1 class="display-4">Sneaky!</h1>
+      <hr>
+      <p class="instructions">You are not allowed to browse other peoples artifacts.</p>
+      <hr>
+    </div>
+ </div>
+<br>
+{% endif %}
 
 {% endblock %}
