--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if user == current_user %}
 
   <script src="{{ url_for('static', filename='jquery.js') }}"></script>
   <script>
@@ -122,5 +123,16 @@ $(document).ready(function() {
 </table>
     </div>
   </div>
-<hr><br><br>
+<hr><br>
+{% else %}
+<div class="row pt-3">
+    <div class="col-lg-12">
+      <h1 class="display-4">Sneaky!</h1>
+      <hr>
+      <p class="instructions">You are not allowed to browse other peoples collections.</p>
+      <hr>
+    </div>
+ </div>
+<br>
+{% endif %}<br>
 {% endblock %}
