--- a/app/templates/progress.html
+++ b/app/templates/progress.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if user == current_user %}
 
   <div class="row pt-3">
     <div class="col-lg-12">
@@ -226,5 +227,15 @@
   </table>
     </div>
   </div>
-<hr><br><br>
+<hr><br>{% else %}
+<div class="row pt-3">
+    <div class="col-lg-12">
+      <h1 class="display-4">Sneaky!</h1>
+      <hr>
+      <p class="instructions">You are not allowed to browse other peoples progress.</p>
+      <hr>
+    </div>
+ </div>
+<br>
+{% endif %}<br>
 {% endblock %}
