--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -32,7 +32,59 @@
 <hr>
     </div>
 </div>
+<div class="row pt-3">
+    <div class="col-lg-6">
+        <table class="table table-borderless">
+            <thead class="thead-dark">
+            <tr>
+                <th class="text-center" colspan="2">Change Log</th>
+            </tr>
+            <tr>
+                <th class="bg-secondary">Date</th>
+                <th class="bg-secondary">Notes</th>
+            </tr>
+            </thead>
+            <tr>
+                <td>2017-07-09</td>
+                <td>Change log added</td>
+            </tr>
+            <tr>
+                <td>-</td>
+                <td>Improved speed of boss team calculation<br>Export feature implemented<br>Added resources<br>Various QoL updates<br>Security updates<br></td>
+            </tr>
+            <tr>
+                <td>2020-06-18</td>
+                <td>First deployment online</td>
+            </tr>
 
+        </table>
+    </div>
+    <div class="col-lg-6">
+        <table class="table table-borderless">
+            <thead class="thead-dark">
+            <tr>
+                <th class="text-center" colspan="2">In development / Ideas</th>
+            </tr>
+            <tr>
+                <th class="bg-secondary">Status</th>
+                <th class="bg-secondary">Project</th>
+            </tr>
+            </thead>
+            <tr>
+                <td>Active</td>
+                <td>Major update to bring life and value to users</td>
+            </tr>
+            <tr>
+                <td>Idea</td>
+                <td>Blitz team generator</td>
+            </tr>
+            <tr>
+                <td>Idea</td>
+                <td>Connect with other users, possibly guild members</td>
+            </tr>
+        </table>
+    </div>
+</div>
 
 
 {% endblock %}
