--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -83,18 +83,7 @@
         <hr>
         <p><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">create an account</a> to access all the features.</p>
         <hr>
-        <table class="table table-borderless">
-            <tr class="table-light">
-                <td class="text-left">
-                <dl>
-                        <dt class="text-secondary"><code class="text-secondary">In development:</code></dt>
-                    <dd><code class="text-secondary"><strike>- Resources/guides section, accessible without logging in.</strike></code></dd>
-                    <dd><code class="text-secondary"><strike>- Ability to export your hero collection and stats.</strike></code></dd>
-                    <dd><code class="text-secondary"><strike>- Improve speed of bossTeam algorithm.</strike> | <strong>Lightning speed!</strong></code></dd>
-                        <dd><code class="text-secondary">- Calculate and present hero investments.</code></dd>
-                </dl></td>
-            </tr>
-        </table>
+        <a href="{{ url_for('about') }}">Change log / in development</a>
     </div>
 <div class="col-lg-3">
    &nbsp;
