--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -45,7 +45,11 @@
             </tr>
             </thead>
             <tr>
-                <td>2017-07-09</td>
+                <td>2020-08-18</td>
+                <td>Added Manta and TNT.<br>Companion updated to latest game version.</td>
+            </tr>
+            <tr>
+                <td>2020-07-09</td>
                 <td>Change log added</td>
             </tr>
             <tr>
@@ -73,6 +77,10 @@
             <tr>
                 <td>Active</td>
                 <td>Major update to bring life and value to users</td>
+            </tr>
+            <tr>
+                <td>Active</td>
+                <td>Possibility to recover / change password</td>
             </tr>
             <tr>
                 <td>Idea</td>
